--- a/src/index.css
+++ b/src/index.css
@@ -1,56 +1,123 @@
-html{
-  font-size:62.5%;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
+html {
+  font-size: 62.5%;
   box-sizing: border-box;
 }
-
 body,
- #root{
+#root {
   height: 100vh;
   margin: 0;
 }
-
-body, input, select, textarea{
+body,
+input,
+select,
+button,
+textarea {
+  font-family: Montserrat, Helvetica, Arial, sans-serif;
   font-size: 1.6rem;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
-.grid-container{
-  display:grid;
-  grid-template-areas: "header"
-  "main"
-  "footer";
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
   grid-template-rows: 5rem 1fr 5rem;
   grid-template-columns: 1fr;
   height: 100%;
 }
-
-a:hover{
-  color: orange;
+a {
+  text-decoration: none;
 }
-
-header{
+a:hover {
+  color: #ff8000;
+}
+header {
   grid-area: header;
   background-color: #203040;
   color: #ffffff;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  padding:  .5rem;
+  padding: 0.5rem;
 }
-
-header a{
+header a {
   color: #ffffff;
   text-decoration: none;
 }
-
-main{
+main {
   grid-area: main;
 }
-
-footer{
+footer {
   grid-area: footer;
   background-color: #203040;
   color: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+}
+.main {
+  flex: 3 60rem;
+}
+.sidebar {
+  flex: 1 20rem;
+}
+
+/* products */
+.productos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+.productos li {
+  flex: 0 1 29rem;
+  height: 47rem;
+  padding: 1rem;
+}
+.producto {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+.producto img {
+  max-width: 37rem;
+  max-height: 37rem;
+}
+.producto-precio {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.producto-price div,
+.producto-price button {
+  text-align: center;
+  flex: 1;
+}
+.producto-price div {
+  font-size: 2rem;
+}
+.button {
+  padding: 1rem;
+  border: 0.1rem #c0c0c0 solid;
+  background-color: #f0f0f0;
+  cursor: pointer;
+}
+.button:hover {
+  border: 0.1rem #808080 solid;
+}
+
+.button.primary{
+  background-color: #ffc000;
 }
