--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ footer {
 .productos li {
   flex: 0 1 29rem;
   height: 47rem;
-  padding: 1rem;
+  padding: 1rem; 
 }
 .producto {
   display: flex;
@@ -94,6 +94,7 @@ footer {
 }
 
 .producto img {
+  width: 100%;
   max-width: 37rem;
   max-height: 37rem;
 }
@@ -122,4 +123,48 @@ footer {
 
 .button.primary{
   background-color: #ffc000;
+}
+
+
+
+/*estilos para mi tarjeta*/
+.jcard {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  margin: 1.5rem;
+  width: 47rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.jcard a{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+/* .card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+ */
+.jcontainer {
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 85%;
+}
+
+.jcontainer div, 
+.jcontainer button{
+  flex-grow: 1;
+}
+
+.jimagen{
+  padding-top: 1rem;
+  width:100%;
+  max-height: 70%;
+  max-width: 75%;
+  
 }
