--- a/src/index.css
+++ b/src/index.css
@@ -195,3 +195,27 @@ footer {
   flex: 1;
 }
 
+
+/* Formulario de realizar compra */
+
+
+form{
+  width: 100%;
+}
+
+.form-container{
+  padding: 0;
+  list-style-type: none;
+  width: 100%;
+} 
+
+input{
+  padding: 1rem;
+  border: 0.1rem #c0c0c0 solid;
+}
+
+.form-container li{
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
