--- a/src/index.css
+++ b/src/index.css
@@ -247,3 +247,42 @@ input{
   top: 2.5rem;
   z-index: 1000;
 }
+
+/* Order Details */
+
+.orden-detalle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.orden-detalle li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.orden-detalle li div {
+  padding: 10px;
+}
+.orden-detalle .items {
+  text-align: right;
+  padding: 0;
+}
+.mensaje-exitoso {
+  color: green;
+}
+/* Orders */
+.orders {
+  width: 100%;
+  padding: 10px;
+}
+tbody > tr:nth-child(odd) {
+  background-color: #f0f0f0;
+}
+td {
+  padding: 5px;
+}
+th {
+  text-align: left;
+}
